completed searchProducts and searchProductsWithCategories